<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/antique_white">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginBottom="96dp"
        android:textColor="@color/amaranth_purple" />

    <Button
        android:id="@+id/btnTicTacToe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="24sp"
        android:backgroundTint="#AB9B96"
        android:textColor="@color/antique_white"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnGameOfLife"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_of_life"
        android:textSize="24sp"
        android:backgroundTint="#A1674A"
        android:textColor="@color/antique_white"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnCurveTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curve_tracking"
        android:textSize="24sp"
        android:backgroundTint="#BA6E6E"
        android:textColor="@color/antique_white" />

</LinearLayout>
