<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/antique_white">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_arrow_back"
        android:background="?android:attr/selectableItemBackground"
        android:layout_gravity="start|top"
        android:scaleType="fitCenter"
        app:tint="@color/amaranth_purple"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:text="@string/tic_tac_toe"
            android:textColor="@color/amaranth_purple"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center" />

        <Button
            android:id="@+id/btnPVP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/cinereous"
            android:text="@string/PVP"
            android:textColor="@color/antique_white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/cinereous"
            android:text="@string/easy"
            android:textColor="@color/antique_white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/cinereous"
            android:text="@string/medium"
            android:textColor="@color/antique_white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnImpossible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/cinereous"
            android:text="@string/impossible"
            android:textColor="@color/antique_white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="Taille du jeu :"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/cinereous"
            />

        <NumberPicker
            android:id="@+id/nbCases"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:textSize="30sp"
            />

    </LinearLayout>

</FrameLayout>